# pac-color

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.devel  README.md
.github/workflows/: publish-release-docker.yml
src/: colors.rs  image_gen.rs  main.rs
