[package]
name = "pac-color"
version = "0.1.0"
edition = "2021"

[dependencies]
color_processing = "0.6.3"
image = { version = "0.25.5", default-features = false, features = ["gif", "ico", "jpeg", "png", "webp"] }
rocket = { version = "0.5.1", features = ["json"] }

[profile.release]
strip = true
lto = true
